# ws-rust-chat

./: .gitignore  Cargo.toml  README.md
client/: index.html  main.js  styles.css
server/client/: index.html  main.js  styles.css
server/demo/: safe-multi-thread.rs
server/src/: main.rs
src/: filters.rs  handlers.rs  main.rs  services.rs  state.rs
