[package]
name = "crowbar.chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3.6"
serde = { version = "1.0.188" , features = ["derive"] }
serde_json = "1.0.107"
futures = { version = "0.3.28", default-features = false }
uuid = { uuid = "1.4.1", features = ["serde", "v4"] }
